--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "flow-bin": "^0.100.0",
     "prettier": "^1.17.1"
   },
   "keywords": [
@@ -31,6 +32,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "flow": "node_modules/.bin/flow",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
