--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "babel-plugin-emotion": "^10.0.9",
+    "babel-preset-gatsby": "^0.1.11",
     "flow-bin": "^0.100.0",
     "prettier": "^1.17.1"
   },
