--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.11",
+    "@mdx-js/mdx": "^1.0.20",
+    "@mdx-js/react": "^1.0.20",
+    "@mdx-js/tag": "^0.20.3",
     "gatsby": "^2.8.2",
     "gatsby-image": "^2.1.2",
+    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-remark-autolink-headers": "^2.0.16",
+    "gatsby-remark-images": "^3.0.14",
+    "gatsby-remark-prismjs": "^3.2.10",
+    "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.21",
+    "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
