--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.1.3",
+    "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-images": "^3.0.14",
     "gatsby-remark-prismjs": "^3.2.10",
