--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-remark-autolink-headers": "^2.0.16",
+    "gatsby-remark-code-buttons": "^2.0.1",
     "gatsby-remark-images": "^3.0.14",
-    "gatsby-remark-prismjs": "^3.2.10",
     "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-remark-responsive-iframe": "^2.1.1",
+    "gatsby-remark-vscode": "^1.0.6",
     "gatsby-source-filesystem": "^2.0.38",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.21",
-    "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
