--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-netlify": "^2.0.17",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-sitemap": "^2.1.0",
+    "gatsby-plugin-sri": "^1.0.8",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-code-buttons": "^2.0.1",
     "gatsby-remark-images": "^3.0.14",
