Tweaked README, fixed error, added netlify settings/config

--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/tmWebDev/techmunchies"
+    "url": "https://github.com/mariolopjr/techmunchies"
   },
   "bugs": {
-    "url": "https://gitlab.com/tmWebDev/techmunchies/issues"
+    "url": "https://github.com/mariolopjr/techmunchies/issues"
   }
 }
