--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "babel-plugin-emotion": "^10.0.9",
     "babel-preset-gatsby": "^0.1.11",
     "flow-bin": "^0.100.0",
+    "netlify-lambda": "^1.4.13",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.17.1"
   },
   "keywords": [
@@ -49,7 +51,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "run-p build:**",
+    "build:app": "gatsby build",
     "build:lambda": "netlify-lambda build src/lambda",
     "develop": "gatsby develop",
     "flow": "node_modules/.bin/flow",
