--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-emotion": "^10.0.9",
     "babel-preset-gatsby": "^0.1.11",
     "flow-bin": "^0.100.0",
+    "http-proxy-middleware": "^0.19.1",
     "netlify-lambda": "^1.4.13",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.1"
@@ -57,7 +58,9 @@
     "develop": "gatsby develop",
     "flow": "node_modules/.bin/flow",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
+    "start": "run-p start:**",
+    "start:app": "npm run develop",
+    "start:lambda": "netlify-lambda serve src/lambda",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
