--- a/package.json
+++ b/package.json
@@ -39,13 +39,17 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "babel-jest": "^24.8.0",
     "babel-plugin-emotion": "^10.0.9",
     "babel-preset-gatsby": "^0.1.11",
     "flow-bin": "^0.100.0",
     "http-proxy-middleware": "^0.19.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.8.0",
     "netlify-lambda": "^1.4.13",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.17.1"
+    "prettier": "^1.17.1",
+    "react-test-renderer": "^16.8.6"
   },
   "keywords": [
     "gatsby"
@@ -62,7 +66,8 @@
     "start:app": "npm run develop",
     "start:lambda": "netlify-lambda serve src/lambda",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "jest",
+    "test:ci": "jest --ci --coverage"
   },
   "repository": {
     "type": "git",
