--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,15 @@
 {
-  "extends": ["config:base"],
-  "major": {
-    "enabled": false
-  },
+  "extends": [
+    "config:base",
+    "group:all",
+    "schedule:weekends",
+    ":automergeMinor",
+    ":disableMajorUpdates",
+    ":maintainLockFilesWeekly",
+    ":rebaseStalePrs",
+    ":separateMajorReleases"
+  ],
   "prHourlyLimit": 2,
   "prConcurrentLimit": 20,
-  "rebaseStalePrs": false,
-  "rangeStrategy": "bump",
-  "bumpVersion": null
+  "rangeStrategy": "bump"
 }
