--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-jest": "^24.9.0",
     "babel-plugin-emotion": "^10.0.27",
     "babel-preset-gatsby": "^0.2.26",
+    "cypress": "^3.8.1",
     "flow-bin": "^0.115.0",
     "http-proxy-middleware": "^0.20.0",
     "identity-obj-proxy": "^3.0.0",
@@ -49,7 +50,8 @@
     "netlify-lambda": "^1.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "react-test-renderer": "^16.12.0"
+    "react-test-renderer": "^16.12.0",
+    "start-server-and-test": "^1.10.6"
   },
   "keywords": [
     "gatsby"
@@ -59,7 +61,9 @@
     "build": "run-p build:**",
     "build:app": "gatsby build",
     "build:lambda": "netlify-lambda build src/lambda",
+    "cy:open": "cypress open",
     "develop": "gatsby develop",
+    "develop:vs": "gatsby develop -H 0.0.0.0",
     "flow": "node_modules/.bin/flow",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "run-p start:**",
@@ -67,7 +71,9 @@
     "start:lambda": "netlify-lambda serve src/lambda",
     "serve": "gatsby serve",
     "test": "jest",
-    "test:ci": "jest --ci --coverage"
+    "test:ci": "jest --ci --coverage",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
+    "test:e2e:vs": "start-server-and-test develop:vs http://localhost:8000 cy:open"
   },
   "repository": {
     "type": "git",
