--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-netlify": "^2.1.30",
     "gatsby-plugin-netlify-cache": "^1.2.0",
+    "gatsby-plugin-netlify-cms": "^4.1.35",
     "gatsby-plugin-netlify-functions": "0.0.3",
+    "gatsby-plugin-nprogress": "^2.1.18",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-robots-txt": "^1.5.0",
@@ -25,14 +27,17 @@
     "gatsby-plugin-sitemap": "^2.2.24",
     "gatsby-plugin-sri": "^1.0.11",
     "gatsby-remark-autolink-headers": "^2.1.21",
-    "gatsby-remark-code-buttons": "^2.0.4",
+    "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-remark-embedder": "^1.7.0",
     "gatsby-remark-images": "^3.1.39",
+    "gatsby-remark-prismjs": "^3.3.30",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-responsive-iframe": "^2.2.30",
-    "gatsby-remark-vscode": "^1.4.0",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.9",
+    "netlify-cms-app": "^2.11.1",
+    "prismjs": "^1.18.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
