--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,15 +2,17 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: static/img
-public_folder: /img
+media_folder: static/media
+public_folder: /media
 
 collections:
   - name: "post"
     label: "Posts"
-    folder: "src/pages/blog"
+    label_singular: 'Post'
+    folder: "content/blog"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    path: '{{slug}}/index'
     fields:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
