--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,8 +18,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run build --if-present
-    - run: npm run test:ci
-    - run: npm run test:e2e
-      env:
-        CI: true
+    - run: npm run build
