--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "run-p build:**",
+    "build": "run-s build:**",
     "build:app": "gatsby build",
     "build:lambda": "netlify-lambda build src/lambda",
     "cy:open": "cypress open",
